--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "buildSimulatorAll": "easEnv=development eas build --profile development-simulator --platform all",
+    "buildSimulatorAll": "easEnv=development eas build --profile development --platform all",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@shopify/react-native-skia": "0.1.172",
     "expo": "~48.0.18",
+    "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
