--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start--clear",
     "android": "expo start --android",
     "buildSimulatorAll": "easEnv=development eas build --profile development --platform all",
     "ios": "expo start --ios",
