--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "skiareanimatedbug",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --clear",
-    "android": "expo start --android",
-    "buildSimulatorAll": "easEnv=development eas build --profile development --platform all",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "buildSimulatorAll": "eas build --profile development --platform all",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@shopify/react-native-skia": "0.1.195",
-    "expo": "~48.0.19",
+    "expo": "~48.0.18",
     "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-reanimated": "3.3.0"
+    "react-native-reanimated": "3.3.0",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
